# vectrade-mcp

./: .gitignore  CHANGELOG.md  CLAUDE_CODE_MARKET_PLAN.md  CLAUDE_CODE_MARKET_SUBMISSION_GUIDE.md  CONTRIBUTING.md  Dockerfile  INDUSTRIAL_GRADE_HARDENING_CHECKLIST.md  MCP_RUNBOOK.md  PRE_RELEASE_CHECKLIST.md  PRE_RELEASE_VALIDATION_REPORT.md  PRIVACY.md  QUICK_RELEASE_GUIDE.md  README.md  RELEASE_EXECUTION_SUMMARY.md  RELEASE_PR_TEMPLATE.md  SECURITY.md  SUPPORT_SLA.md  TOOLS.md  claude-compat-report.json  package-lock.json  package.json  pyproject.toml  requirements.txt  skill.json  tsconfig.json  tsup.config.ts
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: marketplace-rollout-checklist.md
.github/agents/: vt-mcp-dev.agent.md  vt-mcp-tester.agent.md
.github/workflows/: ci.yml  mcp-smoke-prod.yml  publish.yml
.well-known/: mcp.json
configs/: claude-desktop-trading.json  claude-desktop.json  continue-dev.json  windsurf.json
docker/: Dockerfile  docker-compose.yml
plugins/vectrade-mcp-plugin/: .mcp.json  README.md
plugins/vectrade-mcp-plugin/.claude-plugin/: plugin.json
plugins/vectrade-mcp-plugin/skills/vectrade/: SKILL.md
scripts/: claude-compat-check.mjs  setup.py  verify.py
src/: index.ts  server.ts
src/tools/: analysis.ts  fundamentals.ts  news.ts  options.ts  portfolio.ts  quotes.ts  screener.ts  technicals.ts  trading.ts
src/utils/: api-client.ts  formatters.ts  request-context.ts
tests/: conftest.py  hosted-mcp.test.ts  test_cli.py  test_configs.py  test_doctor_entry.py  test_live.py  test_setup_wizard.py  test_verify.py  trading.test.ts
vectrade_mcp/: __init__.py  cli.py  doctor.py  setup_wizard.py  verify.py
